--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<div id="math-section">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+</head>
+<body>
+  <div id="math-section">
     <h1 style="text-align:center;">LD11 privalomas</h1>
   
     <math xmlns="http://www.w3.org/1998/Math/MathML" display="block">
@@ -90,10 +100,13 @@
   </div>
   </section>
         <h1 style="text-align:center;">LD11 papildomas</h1>
-        <svg viewBox="0 0 500 500" class="svg">
+        <div class="svg-container">
+        <svg viewBox="8 18 44 39" class="svg">
           <polyline points="10,30 40,20 50,30 10,30" fill="none" stroke="black" stroke-width="3.5"  stroke-linejoin="round" stroke-linecap="round"  />
           <polyline points="10,30 10,55 50,55 50,30" fill="none" stroke="black" stroke-width="3.5"  stroke-linejoin="round" stroke-linecap="round"/>
           <circle cx="20" cy="46" r="5" fill="none" stroke="black" stroke-width="3.5"/>
           <circle cx="39" cy="39" r="4" fill="none" stroke="black" stroke-width="3.5"/>
         </svg>
-</div>
+      </div>
+</body>
+</html>
